Fix formatting in package.json dependencies

--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "dotenv": "^17.2.3",
     "emoji-name-map": "^2.0.3",
     "github-username-regex": "^1.0.0",
-    "word-wrap": "^1.2.5"
-    "express": "^5.2.1",
+    "word-wrap": "^1.2.5",
+    "express": "^5.2.1"
 },
   "lint-staged": {
     "*.{js,css,md}": "prettier --write"
