--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "github-readme-stats"
 main = "express.js"
 
-compatibility_flags = ["nodejs_compat", "new_module_registry", "experimental"]
+compatibility_flags = ["nodejs_compat"]
 compatibility_date = "2025-12-10"
